@@ -510,7 +510,9 @@ check-since-version)
 compile-test-resources)
   # this task is useful during migration to new JDK to let compile resources on new jdk only
   ./mvnw -e --no-transfer-progress clean test-compile \
-  -Dcheckstyle.skipCompileInputResources=false -Dmaven.compiler.release=21
+  -Dcheckstyle.skipCompileInputResources=false \
+  -Dmaven.compiler.release=21 \
+  -Dmaven.compiler.args="--enable-preview"
   ;;
 
 javac17_standard)
